--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,23 +1,13 @@
-FROM python:3.10-slim
-
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-ENV PYTHONPATH "${PYTHONPATH}:/app"
-
-RUN apt-get update && apt-get install -y \
-    libpq-dev
-
-WORKDIR /app
-
+FROM python:3.11
+# Install Poetry
 RUN pip install poetry
-COPY pyproject.toml poetry.lock /app/
-RUN poetry config virtualenvs.create true \
-    && poetry install --no-dev --no-interaction --no-ansi
-
-COPY . /app/
-
-RUN chmod +x /app/prestart.sh
-
-EXPOSE 8000
-
-ENTRYPOINT ["poetry", "run", "bash", "-c", "/app/prestart.sh && uvicorn app.main:app --host 0.0.0.0 --port 8000"]
+# Set the working directory
+WORKDIR /application
+# Copy pyproject.toml and poetry.lock to the working directory
+COPY pyproject.toml poetry.lock ./
+# Install dependencies using Poetry
+RUN poetry install --no-root
+# Copy the rest of the application cosudode into the container
+COPY . .
+ENV PYTHONPATH=/application
+CMD poetry run bash ./prestart.sh; poetry run uvicorn app.main:app --host 0.0.0.0
